--- a/index.html
+++ b/index.html
@@ -7,24 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 </head>
 
 <body style="margin: 0;">
-    <header class="container">
-        <div class="row">
-            <div class="col">
-                <img src="images/BingChilling.jpg" alt="Avatar" class="avatar">
-            </div>
-            <div class="col">
-                <h1 class="site_name">Bing Chilling</h1>
-            </div>
+    <header class="header">
+        <div class="inhead">
+            <img src="images/BingChilling.jpg" alt="Avatar" class="avatar">
+            <h1 class="site_name">Bing Chilling</h1>
         </div>
     </header>
 
@@ -112,7 +101,7 @@
             <li><a href="/other">ссылка на внутреннюю (допустим, текущая станица - example.com)</a></li>
         </ol>
         <div id="table-form-wrapper">
-            <table class="table table-striped">
+            <table class="table">
                 <tbody>
                     <tr>
                         <th>Колонка 1</th>
@@ -142,15 +131,15 @@
                 <p><a name="form"></a></p>
                 <label>
                     Поле для имени:<br />
-                    <input name="field-name-1" value="Имя" class="form-control"/>
+                    <input name="field-name-1" value="Имя" />
                 </label><br /><br />
                 <label>
                     Поле для email:<br />
-                    <input name="field-email" value="test@example.com" type="email" class="form-control"/>
+                    <input name="field-email" value="test@example.com" type="email" />
                 </label><br /><br />
                 <label>
                     Поле для даты рождения:<br />
-                    <input name="field-date" value="2022-09-12" type="date" class="form-control"/>
+                    <input name="field-date" value="2022-09-12" type="date" />
                 </label><br /><br />
                 Пол:<br />
                 <label><input type="radio" checked="checked" name="radio-group-1" value="Значение1" />
@@ -174,7 +163,7 @@
                 </label><br /><br />
                 <label>
                     Сверхспособности:<br />
-                    <select name="field-name-8[]" multiple="multiple" class="form-control">
+                    <select name="field-name-8[]" multiple="multiple">
                         <option value="Значение0" selected="selected">none</option>
                         <option value="Значение1">бессмертие</option>
                         <option value="Значение2">прохождение сквозь стены</option>
@@ -184,12 +173,12 @@
                 </label><br /><br />
                 <label>
                     Биография:<br />
-                    <textarea name="field-name-2" class="form-control">начальное значение</textarea>
+                    <textarea name="field-name-2">начальное значение</textarea>
                 </label><br /><br />
                 <label><input type="checkbox" checked="checked" name="check-1" />
                     С контрактом ознакомлен(а)
                 </label><br /><br />
-                <button class="btn btn-outline-secondary">Отправить</button>
+                <input type="submit" value="Отправить" />
             </form>
         </div>
     </div>
