--- a/index.html
+++ b/index.html
@@ -7,25 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </head>
 
 <body style="margin: 0;">
-    <header class="header">
-        <div class="inhead">
-            <img src="images/BingChilling.jpg" alt="Avatar" class="avatar">
-            <h1 class="site_name">Bing Chilling</h1>
+    <div class="w-100 bg-dark">
+        <div class="container p-5 mb-2 text-white">
+            <div class="row">
+                <div class="col">
+                    <img src="images/BingChilling.jpg" alt="Avatar" class="avatar">
+                </div>
+                <div class="col-7 me-4 align-self-center">
+                    <h1 class="site_name">Bing Chilling</h1>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
 
     <div class="container">
-        <nav>
-            <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <ul class="nav justify-content-center">
+            <li><a class="nav-link" href="#home">Home</a></li>
+            <li><a class="nav-link" href="#about">About</a></li>
+            <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
 
         <ol>
             <li><a href="http://example.com">Example (unprotected)</a></li>
@@ -101,7 +112,7 @@
             <li><a href="/other">ссылка на внутреннюю (допустим, текущая станица - example.com)</a></li>
         </ol>
         <div id="table-form-wrapper">
-            <table class="table">
+            <table class="table table-striped">
                 <tbody>
                     <tr>
                         <th>Колонка 1</th>
@@ -131,15 +142,15 @@
                 <p><a name="form"></a></p>
                 <label>
                     Поле для имени:<br />
-                    <input name="field-name-1" value="Имя" />
+                    <input name="field-name-1" value="Имя" class="form-control" />
                 </label><br /><br />
                 <label>
                     Поле для email:<br />
-                    <input name="field-email" value="test@example.com" type="email" />
+                    <input name="field-email" value="test@example.com" type="email" class="form-control" />
                 </label><br /><br />
                 <label>
                     Поле для даты рождения:<br />
-                    <input name="field-date" value="2022-09-12" type="date" />
+                    <input name="field-date" value="2022-09-12" type="date" class="form-control" />
                 </label><br /><br />
                 Пол:<br />
                 <label><input type="radio" checked="checked" name="radio-group-1" value="Значение1" />
@@ -163,7 +174,7 @@
                 </label><br /><br />
                 <label>
                     Сверхспособности:<br />
-                    <select name="field-name-8[]" multiple="multiple">
+                    <select name="field-name-8[]" multiple="multiple" class="form-control">
                         <option value="Значение0" selected="selected">none</option>
                         <option value="Значение1">бессмертие</option>
                         <option value="Значение2">прохождение сквозь стены</option>
@@ -173,18 +184,18 @@
                 </label><br /><br />
                 <label>
                     Биография:<br />
-                    <textarea name="field-name-2">начальное значение</textarea>
+                    <textarea name="field-name-2" class="form-control">начальное значение</textarea>
                 </label><br /><br />
                 <label><input type="checkbox" checked="checked" name="check-1" />
                     С контрактом ознакомлен(а)
                 </label><br /><br />
-                <input type="submit" value="Отправить" />
+                <button class="btn btn-outline-secondary">Отправить</button>
             </form>
         </div>
     </div>
 
-    <footer class="floor">
-        <div id="developer_kvn">(c) Кан Владимир 2022</div>
+    <footer class="bg-dark text-white p-5">
+        <div>(c) Кан Владимир 2022</div>
     </footer>
 </body>
 
