--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
 </head>
 
 <body style="margin: 0;">
@@ -112,7 +108,7 @@
             <li><a href="/other">ссылка на внутреннюю (допустим, текущая станица - example.com)</a></li>
         </ol>
         <div id="table-form-wrapper">
-            <table class="table table-striped">
+            <table class="table table-striped order-md-2">
                 <tbody>
                     <tr>
                         <th>Колонка 1</th>
@@ -138,7 +134,7 @@
                 </tbody>
             </table>
 
-            <form action="URL_отправки_данных" method="POST">
+            <form action="URL_отправки_данных" method="POST" class="order-md-1">
                 <p><a name="form"></a></p>
                 <label>
                     Поле для имени:<br />
@@ -197,6 +193,11 @@
     <footer class="bg-dark text-white p-5">
         <div>(c) Кан Владимир 2022</div>
     </footer>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
