--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-center flex-column flex-md-row">
             <li><a class="nav-link" href="#home">Home</a></li>
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
